--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
-    "deploy": "npm run build && wrangler deploy",
-    "cf-typegen": "wrangler types --env-interface Env",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build && tsc --noEmit",
+    "preview": "vite preview",
+    "deploy": "wrangler deploy",
+    "cf-typegen": "wrangler types"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.84.2",
-    "@tanstack/react-query-devtools": "^5.84.2",
-    "@tanstack/react-router": "^1.129.8",
-    "@tanstack/react-router-devtools": "^1.129.8",
-    "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.129.8",
+    "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-router": "^1.132.47",
+    "@tanstack/react-router-devtools": "^1.132.51",
+    "@tanstack/react-router-ssr-query": "^1.132.47",
+    "@tanstack/react-start": "^1.132.52",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
     "nitro-cloudflare-dev": "^0.2.2",
@@ -31,10 +31,12 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11",
-    "vite": "^7.0.6"
+    "vite": "^7.1.9"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.13.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/nitro-v2-vite-plugin": "^1.132.40",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
