--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,13 +1,20 @@
+// {
+//   "$schema": "node_modules/wrangler/config-schema.json",
+//   "name": "2025v12-bln-website",
+//   "main": ".output/server/index.mjs",
+//   "compatibility_date": "2025-07-30",
+//   "compatibility_flags": ["nodejs_compat"],
+//   "assets": {
+//     "directory": ".output/public",
+//   },
+//   "observability": {
+//     "enabled": true,
+//   },
+// }
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "2025v12-bln-website",
-  "main": ".output/server/index.mjs",
-  "compatibility_date": "2025-07-30",
+  "name": "tanstack-start-app",
+  "compatibility_date": "2025-09-02",
   "compatibility_flags": ["nodejs_compat"],
-  "assets": {
-    "directory": ".output/public",
-  },
-  "observability": {
-    "enabled": true,
-  },
+  "main": "@tanstack/react-start/server-entry"
 }
