--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/nitro-v2-vite-plugin": "^1.132.40",
     "@types/lodash": "^4.17.20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-grid-layout": "^1.3.5",
