--- a/.github/workflows/R2-sync.yml
+++ b/.github/workflows/R2-sync.yml
@@ -13,11 +13,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Sync Markdown files to R2
-        uses: jw-12138/r2-directory-sync@v1 # Or another suitable R2 sync action
+        uses: zhaijunxiao/r2-dir-sync@v1.0.1 # Or another suitable R2 sync action
         with:
-          cloudflare_account_id: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          r2_access_key_id: ${{ secrets.R2_ACCESS_KEY_ID }}
-          r2_secret_access_key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          r2_bucket_name: ${{ secrets.R2_BUCKET_NAME }}
-          source_directory: "src/prose" # e.g., "docs" or "content"
-          destination_directory: "prose" # Optional: specify a subdirectory in R2
+          accountid: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          accesskeyid: ${{ secrets.R2_ACCESS_KEY_ID }}
+          secretaccesskey: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          bucket: ${{ secrets.R2_BUCKET_NAME }}
+          source: ${{ github.workspace }}/src/prose # e.g., "docs" or "content"
+          destination: "prose" # Optional: specify a subdirectory in R2
+          filenamePattern: .*
