--- a/.github/workflows/R2-sync.yml
+++ b/.github/workflows/R2-sync.yml
@@ -4,21 +4,26 @@ on:
   push:
     branches:
       - main # Or your desired branch
+    paths:
+      - "/src/prose/" # Specify the path to your markdown files
 
 jobs:
   deploy:
-    runs-on: [ ubuntu-latest ]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Sync Markdown files to R2
-        uses: zhaijunxiao/r2-dir-sync@v1.0.1 # Or another suitable R2 sync action
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          accountid: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          accesskeyid: ${{ secrets.R2_ACCESS_KEY_ID }}
-          secretaccesskey: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          bucket: ${{ secrets.R2_BUCKET_NAME }}
-          source: ${{ github.workspace }}/src/prose # e.g., "docs" or "content"
-          destination: "prose" # Optional: specify a subdirectory in R2
-          filenamePattern: .*
+          aws-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          aws-region: auto # R2 is global, 'auto' is fine
+
+      - name: Sync Markdown files to R2
+        run: |
+          aws s3 sync /src/prose/ s3://${{ secrets.R2_BUCKET_NAME }}/prose/ \
+            --endpoint-url https://${{ secrets.CLOUDFLARE_ACCOUNT_ID }}.r2.cloudflarestorage.com
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
