--- a/.github/workflows/R2-sync.yml
+++ b/.github/workflows/R2-sync.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main # Or your desired branch
-    paths:
-      - "/src/prose/**" # Specify the path to your markdown files
+#    paths:
+#      - "/src/prose/**" # Specify the path to your markdown files
 
 jobs:
   deploy:
