--- a/.github/workflows/R2-sync.yml
+++ b/.github/workflows/R2-sync.yml
@@ -14,9 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install AWS CLI v2
-        uses: aws-actions/setup-aws-cli@v1
+        uses: unfor19/install-aws-cli-action@v1
         with:
-          version: "2.x"
+          version: 2                         # default
+          verbose: false                     # default
+          arch: amd64                        # allowed values: amd64, x86, x64, arm, arm64
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
