--- a/.github/workflows/R2-sync.yml
+++ b/.github/workflows/R2-sync.yml
@@ -18,7 +18,11 @@ jobs:
         with:
           version: 2                         # default
           verbose: false                     # default
-          arch: amd64                        # allowed values: amd64, x86, x64, arm, arm64
+          arch: amd64                        # allowed values: amd64, arm64
+          bindir: "/usr/local/bin"           # default
+          installrootdir: "/usr/local"       # default
+          rootdir: ""                        # defaults to "PWD"
+          workdir: ""                        # defaults to "PWD/unfor19-awscli"
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
